# it-lab-01

./: .gitignore  Cargo.toml  README.md  database.json
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: io.rs  lib.rs
crates/core/src/types/: database.rs  mod.rs  schema.rs  table.rs
crates/graphql/src/: lib.rs
crates/grpc/: Cargo.toml
crates/ui/: Cargo.toml
crates/ui/src/: main.rs
web_ui/: index.html  package-lock.json  package.json  vite.config.ts
web_ui/src/: App.tsx  main.tsx
