[workspace]
members = [
    "crates/api",
    "crates/core",
    "crates/ui",
    "crates/grpc",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
thiserror = "1.0"
anyhow = "1.0.94"
