[package]
name = "ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
eframe = "0.24.1"  # egui framework
rfd = "0.12.1"     # native file dialogs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
core = { path = "../core" }
